--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <body>
         
         <header>
+            <h1>Il mio viaggio a Londra</h1>
 
+            <div>
+                <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine londra 1">
+                <img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine londra 2">
+                <img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine londra 3">
+            </div>
         </header>
+
+        <hr>
 
         <main>
 
