section "spese" complete

--- a/index.html
+++ b/index.html
@@ -23,6 +23,45 @@
 
         <main>
 
+        <!-- le mie spese -->
+            <div>
+                <h2>Le mie spese</h2>
+
+                <table>
+                    <thead>
+                        <th>Numerp</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td>Totale</td>
+                            <td></td>
+                            <td>360€</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <hr>
+        <!-- fine le mie spese -->
+
         </main>
 
         <footer>
