section "to-do" complete

--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
             </div>
             <hr>
         <!-- fine le mie spese -->
+        
+        <!-- cose da fare -->
+        <div>
+            <h2>Cose da fare</h2>
+
+            <!-- lista non ordinata -->
+            <div>
+                <ol>
+                    <li>Visitare la Tower of London &#10003</li>
+                    <li>Visitare Greenwich ✗</li>
+                    <li>Ascoltare un artista di strada a Covent Garden ✗</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &#10003</li>
+                </ol>
+            </div>
+            <hr>
+        </div>
+        <!-- fine cose da fare -->
+
 
         </main>
 
