fix ordered list + section "info" complete + main complete

--- a/index.html
+++ b/index.html
@@ -68,19 +68,54 @@
 
             <!-- lista non ordinata -->
             <div>
-                <ol>
+                <ul>
                     <li>Visitare la Tower of London &#10003</li>
                     <li>Visitare Greenwich ✗</li>
                     <li>Ascoltare un artista di strada a Covent Garden ✗</li>
                     <li>Mangiare il tipico Fish and Chips inglese &#10003</li>
-                </ol>
+                </ul>
             </div>
             <hr>
         </div>
         <!-- fine cose da fare -->
 
+        <!-- info utili -->
+        <div>
+            <h2>Info utili</h2>
+
+            <!-- lista ordinata -->
+            <div>
+                <ol>
+                    <li>Numeri utili di emergenza
+                        <ul>
+                            <li><strong>999</strong> - Emergenza</li>
+                            <li><strong>101</strong> - Numero polizia</li>
+                            <li><strong>111</strong> - Numero assistenza medica</li>
+                        </ul>
+                    </li>
+                </ol>
+                <ol>
+                    <li>Hotel
+                        <ul>
+                            <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                            <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                        </ul>
+                    </li>
+                </ol>
+                <ol>
+                    <li>Aereo
+                        <ul>
+                            <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
+                            <li><strong>Volo di Ritorno:</strong> Y12346X, ore 18.30 da London Heathrow</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+        </div>
 
         </main>
+
+        <hr>
 
         <footer>
 
