footer complete + page complete

--- a/index.html
+++ b/index.html
@@ -93,16 +93,14 @@
                             <li><strong>111</strong> - Numero assistenza medica</li>
                         </ul>
                     </li>
-                </ol>
-                <ol>
+
                     <li>Hotel
                         <ul>
                             <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
                             <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
                         </ul>
                     </li>
-                </ol>
-                <ol>
+
                     <li>Aereo
                         <ul>
                             <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
@@ -118,7 +116,13 @@
         <hr>
 
         <footer>
+            <h2>Le foto</h2>
 
+            <!-- immagini footer -->
+            <div>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+            </div>
         </footer>
 
     </body>
